--- a/php/app.css
+++ b/php/app.css
@@ -1,7 +1,8 @@
 .container{
     width: 100px;
     height: 100px;
-    background-color: fuchsia;
+    background-color: green;
+    color: white;
     padding: 20px;
     text-align: center;
 }
